attempt fix for mobile border and alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ body {
 
 .header {
     background-color: rgb(130, 180, 250);
-    border: 1.5px, solid, green;
+    border: 1.5px solid green;
     text-align: center;
     padding: 25px 0;
     font-size: 15px;
@@ -42,7 +42,8 @@ nav {
     background-color: var(--bg-color);
     color: black;
     text-align: center;
-    justify-items: center;
+    display: flex;
+    align-items: center;
     margin: 10px 0 10px 0;
     max-width: 600px;
     border: 2.5px solid green;
@@ -68,7 +69,9 @@ nav {
 /* MAIN CONTENT */
 
 main {
-    justify-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -131,7 +134,7 @@ li {
 
 .section {
     background-color: whitesmoke;
-    border: 5px, solid, green;
+    border: 5px solid green;
     box-shadow: 5px 5px 15px black;
     padding: 2.5px 7.5px;
     margin: 0 0 20px 0;
